--- a/index.html
+++ b/index.html
@@ -61,10 +61,7 @@
         </form>
       </div>
       <div
-        class="
-          bell
-          animate__animated animate__shakeX animate__infinite animate__slow
-        "
+        class="bell animate__animated animate__shakeX animate__infinite animate__slow"
       >
         <a href="#"><i class="fa fa-bell fa-lg" aria-hidden="true"></i></a>
       </div>
@@ -220,7 +217,7 @@
         </div>
         <!-- popular artist -->
         <div class="heading white">Popular Artist</div>
-        <div class="row grow">
+        <div class="row grow rowmini">
           <div class="artist">
             <a href="artist.html">
               <img src="assets/images/ed_sheeran.jpg" alt="ed sheeran" />
