--- a/artist.html
+++ b/artist.html
@@ -52,15 +52,65 @@
         </form>
       </div>
       <div
-        class="
-          bell
-          animate__animated animate__shakeX animate__infinite animate__slow
-        "
-      >
-        <a href="#"><i class="fa fa-bell fa-lg" aria-hidden="true"></i></a>
-      </div>
-      <div class="user">
-        <a href="login.html"><img src="assets/images/user.jpg" alt="user" /></a>
+      class="
+        bell
+        animate__animated animate__shakeX animate__infinite animate__slow
+      "
+    >
+      <a href="#"><i class="fa fa-bell fa-lg" aria-hidden="true"></i></a>
+    </div>
+    <div class="user">
+      <a href="login.html">
+        <i class="fa fa-user-circle fa-2x white" style="margin-top: 5px"></i
+          ></a>
+    </div>
+      <input type="checkbox" name="check" id="check" />
+      <label for="check" class="label"><i class="fa fa-bars fa-2x"></i></label>
+      <div id="hamburger">
+        <div class="up">
+          <div class="logo">
+            <a href="#"
+              ><img id="logo_img" src="assets/images/PMT (2).svg" alt="logo" />
+              <h2 id="name" style="display: inline; position: absolute">
+                <span id="soul"> SOUL</span><br />
+                <span id="music"> music</span>
+              </h2></a
+            >
+          </div>
+          <div class="cross">
+            <label for="check"><i class="fa fa-times fa-2x white"></i></label>
+
+            <label for="check"></label>
+          </div>
+        </div>
+
+        <div class="option">
+          <div class="op">
+            <i class="fa fa-search fa-2x"></i>
+            Search
+          </div>
+          <div class="op">
+            <i class="fa fa-home fa-2x"></i>
+            Home
+          </div>
+          <div class="op">
+            <i class="fa fa-user fa-2x"></i>
+            Profile
+          </div>
+          <div class="op">
+            <i class="fa fa-heart fa-2x"></i>
+            Favourites
+          </div>
+          <div class="op">
+            <i class="fa fa-address-card fa-2x"></i>
+            About Us
+          </div>
+          <div class="op">
+            <a href="login.html"
+          "><i class="fa fa-sign-out fa-2x"></i></a>
+            Log Out
+          </div>
+        </div>
       </div>
     </nav>
     <main>
@@ -96,7 +146,7 @@
         </div>
         <div class="playlist">
           <ol>
-            <li class="list_name">
+            <li class="list_name" onclick="location.href='player.html'">
               <table>
                 <tr>
                   <td rowspan="2">
@@ -126,7 +176,7 @@
                 </tr>
               </table>
             </li>
-            <li class="list_name">
+            <li class="list_name" onclick="location.href='player.html'">
               <table>
                 <tr>
                   <td rowspan="2">
@@ -156,7 +206,7 @@
                 </tr>
               </table>
             </li>
-            <li class="list_name">
+            <li class="list_name" onclick="location.href='player.html'">
               <table>
                 <tr>
                   <td rowspan="2">
@@ -186,7 +236,7 @@
                 </tr>
               </table>
             </li>
-            <li class="list_name">
+            <li class="list_name" onclick="location.href='player.html'">
               <table>
                 <tr>
                   <td rowspan="2">
@@ -216,7 +266,7 @@
                 </tr>
               </table>
             </li>
-            <li class="list_name">
+            <li class="list_name" onclick="location.href='player.html'">
               <table>
                 <tr>
                   <td rowspan="2">
@@ -246,7 +296,7 @@
                 </tr>
               </table>
             </li>
-            <li class="list_name">
+            <li class="list_name" onclick="location.href='player.html'">
               <table>
                 <tr>
                   <td rowspan="2">
@@ -286,7 +336,7 @@
             <h5 id="list">View All</h5>
           </div>
           <ul type="none">
-            <li>
+            <li onclick="location.href='player.html'">
               <table>
                 <tr>
                   <td rowspan="2">
@@ -301,7 +351,7 @@
                 </tr>
               </table>
             </li>
-            <li>
+            <li onclick="location.href='player.html'">
               <table>
                 <tr>
                   <td rowspan="2">
@@ -316,7 +366,7 @@
                 </tr>
               </table>
             </li>
-            <li>
+            <li onclick="location.href='player.html'">
               <table>
                 <tr>
                   <td rowspan="2">
@@ -337,7 +387,7 @@
             <h5>View All</h5>
           </div>
           <ol>
-            <li>
+            <li onclick="location.href='player.html'">
               <table>
                 <tr>
                   <td rowspan="2">
@@ -364,7 +414,7 @@
                 </tr>
               </table>
             </li>
-            <li>
+            <li onclick="location.href='player.html'">
               <table>
                 <tr>
                   <td rowspan="2">
@@ -391,7 +441,7 @@
                 </tr>
               </table>
             </li>
-            <li>
+            <li onclick="location.href='player.html'">
               <table>
                 <tr>
                   <td rowspan="2">
@@ -418,7 +468,7 @@
                 </tr>
               </table>
             </li>
-            <li>
+            <li onclick="location.href='player.html'">
               <table>
                 <tr>
                   <td rowspan="2">
@@ -445,7 +495,7 @@
                 </tr>
               </table>
             </li>
-            <li>
+            <li onclick="location.href='player.html'">
               <table>
                 <tr>
                   <td rowspan="2">
@@ -472,7 +522,7 @@
                 </tr>
               </table>
             </li>
-            <li>
+            <li onclick="location.href='player.html'">
               <table>
                 <tr>
                   <td rowspan="2">
@@ -499,7 +549,7 @@
                 </tr>
               </table>
             </li>
-            <li>
+            <li onclick="location.href='player.html'">
               <table>
                 <tr>
                   <td rowspan="2">
@@ -526,7 +576,7 @@
                 </tr>
               </table>
             </li>
-            <li>
+            <li onclick="location.href='player.html'">
               <table>
                 <tr>
                   <td rowspan="2">
@@ -553,7 +603,7 @@
                 </tr>
               </table>
             </li>
-            <li>
+            <li onclick="location.href='player.html'">
               <table>
                 <tr>
                   <td rowspan="2">
@@ -580,7 +630,7 @@
                 </tr>
               </table>
             </li>
-            <li>
+            <li onclick="location.href='player.html'">
               <table>
                 <tr>
                   <td rowspan="2">
@@ -607,7 +657,7 @@
                 </tr>
               </table>
             </li>
-            <li>
+            <li onclick="location.href='player.html'">
               <table>
                 <tr>
                   <td rowspan="2">
@@ -634,7 +684,7 @@
                 </tr>
               </table>
             </li>
-            <li>
+            <li onclick="location.href='player.html'">
               <table>
                 <tr>
                   <td rowspan="2">
@@ -665,5 +715,15 @@
         </div>
       </aside>
     </main>
+    <script>
+      var hamButton = document.getElementById("check");
+      hamButton.addEventListener("click", function () {
+        if (hamButton.checked) {
+          document.getElementById("hamburger").style.display = "block";
+        } else {
+          document.getElementById("hamburger").style.display = "none";
+        }
+      });
+    </script>
   </body>
 </html>
