--- a/login.html
+++ b/login.html
@@ -8,6 +8,17 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
    <body>
+      <nav>
+      <div class="logo">
+         <a href="#"
+           ><img id="logo_img" src="assets/images/PMT (2).svg" alt="logo" />
+           <h2 id="name" style="display: inline; position: absolute">
+             <span id="soul"> SOUL</span><br />
+             <span id="music"> music</span>
+           </h2></a
+         >
+       </div>
+      </nav>
       <div class="wrapper">
          <div class="title-text">
             <div class="title login">
