--- a/player.html
+++ b/player.html
@@ -16,11 +16,22 @@
     @import url("https://fonts.googleapis.com/css?family=Lato&display=swap");
 
     * {
+      --col1: rgb(242, 1, 91);
+      --col2: rgb(243, 1, 179);
+      --col3: rgb(237, 2, 241);
+      --col4: rgb(121, 5, 242);
+      --col5: rgb(4, 3, 141);
       box-sizing: border-box;
     }
 
     body {
-      background-color: rgb(109, 52, 201);
+      background-image: linear-gradient(
+        to bottom right,
+        var(--col4),
+        var(--col5),
+        var(--col4),
+        var(--col5)
+      );
       height: 100vh;
       display: flex;
       flex-direction: column;
@@ -29,11 +40,20 @@
       font-family: "Lato", sans-serif;
       margin: 0;
     }
+    h1 {
+      color: white;
+    }
 
     .music-container {
-      background-color: rgb(131, 6, 204);
+      background-image: linear-gradient(
+        to bottom right,
+        var(--col4),
+        var(--col5),
+        var(--col4),
+        var(--col5)
+      );
       border-radius: 15px;
-      box-shadow: 0 20px 20px 0 rgba(198, 145, 241, 0.6);
+      box-shadow: 0 20px 20px 0 rgba(60, 48, 228, 0.6);
       display: flex;
       padding: 20px 30px;
       position: relative;
@@ -94,8 +114,10 @@
 
     .action-btn {
       background-color: rgb(131, 6, 204);
+
+      box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
       border: 0;
-      color: black;
+      color: white;
       font-size: 20px;
       cursor: pointer;
       padding: 10px;
@@ -103,7 +125,7 @@
     }
 
     .action-btn.action-btn-big {
-      color: black;
+      color: white;
       font-size: 30px;
     }
 
@@ -112,7 +134,13 @@
     }
 
     .music-info {
-      background-color: rgba(77, 46, 46, 0.5);
+      background-image: linear-gradient(
+        to bottom right,
+        var(--col4),
+        var(--col5),
+        var(--col4),
+        var(--col5)
+      );
       border-radius: 15px 15px 0 0;
       position: absolute;
       top: 0;
@@ -135,7 +163,7 @@
     }
 
     .progress-container {
-      background: rgb(209, 39, 209);
+      background: white;
       border-radius: 5px;
       cursor: pointer;
       margin: 10px 0;
@@ -144,7 +172,13 @@
     }
 
     .progress {
-      background-color: violet;
+      background-image: linear-gradient(
+        to bottom right,
+        var(--col4),
+        var(--col5),
+        var(--col4),
+        var(--col5)
+      );
       border-radius: 5px;
       height: 100%;
       width: 0%;
@@ -154,8 +188,11 @@
     .lyrics-box {
       height: 40vh;
       width: 60%;
-      background-color: black;
       float: left;
+    }
+    .filler {
+      flex-grow: 1;
+      flex-shrink: 1;
     }
 
     /* iframe styling */
@@ -164,6 +201,7 @@
       height: 100%;
       background-color: white;
       border-collapse: 0px;
+      font-size: small;
     }
   </style>
   <body>
